tests/baselines/reference/tupleLength.errors.txt
tests/cases/compiler/tupleLength.ts(11,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 't1' must be of type '[number]', but here has type '[number, number]'.
tests/cases/compiler/tupleLength.ts(12,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 't2' must be of type '[number, number]', but here has type '[number]'.


==== tests/cases/compiler/tupleLength.ts (2 errors) ====
    // var t0: [];
    var t1: [number];
    var t2: [number, number];
    var arr: number[];
    
    // var len0: 0 = t0.length;
    var len1: 1 = t1.length;
    var len2: 2 = t2.length;
    var lena: number = arr.length;
    
    var t1 = t2; // error
        ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 't1' must be of type '[number]', but here has type '[number, number]'.
    var t2 = t1; // error
        ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 't2' must be of type '[number, number]', but here has type '[number]'.
    
    type A<T extends any[]> = T['length'];
    var b: A<[boolean]>;
    var c: 1 = b;
    